@@ -2,6 +2,7 @@
 2017-03-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c, error.c: fix minor memory leaks in listing / configuration code
+	* field.c: fix mismatching memory allocation in picture handling
 
 2017-03-11  Ron Norman <rjn@inglenet.com>
 
